# noslacking

./: .env.example  .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  config.example.yaml  pyproject.toml
scripts/: backfill_drive_permissions.py
src/noslacking/: __init__.py  cli.py  config.py
src/noslacking/db/: engine.py  models.py  operations.py
src/noslacking/google/: admin_client.py  auth.py  chat_client.py  models.py
src/noslacking/migration/: executor.py  file_handler.py  message_transform.py  user_mapper.py
src/noslacking/slack/: client.py  extractor.py  models.py
src/noslacking/utils/: logging.py  retry.py
